--- a/tmux.conf
+++ b/tmux.conf
@@ -32,15 +32,10 @@ set -g history-limit 20000
 
 # Open new windows/splits in current working directory instead of home
 bind c new-window -c "#{pane_current_path}"
-bind % split-window -c "#{pane_current_path}"
-bind '"' split-window -h -c "#{pane_current_path}"
+bind s split-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 
-# Change date/time to ISO 8601 format
-# The default setting for status-right is:
-# " \"#{=21:pane_title}\" %H:%M %d-%b-%y" which gives the time/date like
-# "14:45 27-Sep-16" but I prefer the ISO 8601 format (e.g.
-# "2016-09-27T14:45-0700").
-set -g status-right " \"#{=21:pane_title}\" %Y-%m-%dT%H:%M%z"
+set -g status-right "%Y-%m-%d %H:%M%z"
 
 # Change status bar colors
 # Default is "bg=green,fg=black" which is a little harsh
@@ -50,6 +45,36 @@ set -g status-style fg=red
 set -g pane-border-style fg=blue
 set -g pane-active-border-style fg=red
 
+# Highlight active window
+set -g window-status-current-attr bright
+
 # Use vi style navigation keys to scroll
 set -g mode-keys vi
 
+# No repeats
+set -g repeat-time 0
+
+# Easy resize
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind H resize-pane -L 5
+bind L resize-pane -R 5
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+bind C-h select-pane -L
+bind C-j select-pane -D 
+bind C-k select-pane -U
+bind C-l select-pane -R
+
+# Move window left with Ctrl-a Shift-Left
+bind S-Left swap-window -t -1
+# Move window right with Ctrl-a Shift-Right
+bind S-Right swap-window -t +1
+
+# Reload tmux with Ctrl-a r
+bind r source-file ~/.tmux.conf
